--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^7.19.1",
+    "slugify": "^1.4.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
